--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,21 @@
 {
   "name": "Reglamento ICT Interactivo",
-  "short_name": "ICT Interactivo",
+  "short_name": "ICT App",
   "description": "Reglamento de Telecomunicaciones - Capítulo II Interactivo",
-  "start_url": "/index.html",
+  "start_url": "/ict2-web/",
+  "scope": "/ict2-web/",
   "display": "standalone",
   "background_color": "#f3f4f6",
   "theme_color": "#1a73e8",
+  "orientation": "portrait",
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
